--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -5,7 +5,7 @@ server {
     server_tokens off;
 
     root /app/;
-    index index.php;
+    index register.php; 
     
     location / {
         try_files $uri $uri/ /index.php$is_args$args;
