--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -5,8 +5,8 @@ server {
     server_tokens off;
 
     root /app/;
-    index register.php; 
-    
+    index index.php;
+
     location / {
         try_files $uri $uri/ /index.php$is_args$args;
     }
