--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -6,7 +6,9 @@ ENV RUN_DEPS \
     libzip \
     libpng \
     libjpeg-turbo \
-    postgresql-libs
+    postgresql-libs \
+    apt \
+    autoconf
 
 ENV BUILD_DEPS \
     zlib-dev \
@@ -23,14 +25,21 @@ ENV PHP_EXTENSIONS \
     pgsql \
     pdo_pgsql
 
+
 RUN apk add --no-cache --virtual .build-deps $BUILD_DEPS \
     && docker-php-ext-configure gd --with-jpeg \
     && docker-php-ext-install -j "$(nproc)" $PHP_EXTENSIONS \
     && apk del .build-deps
 
+COPY --from=mlocati/php-extension-installer /usr/bin/install-php-extensions /usr/bin/
+RUN install-php-extensions xdebug
+
+ENV XDEBUG_SESSION "debug"
+
 RUN apk add --no-cache --virtual .run-deps $RUN_DEPS
 
 # Copy the application code
 COPY . /app
+COPY ./docker/php/local.ini /usr/local/etc/php/conf.d
 
 VOLUME ["/app"]
